--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="works">
+       <section class="works">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="works-list">
@@ -191,7 +191,7 @@
             </li>
           </ul>
         </div>
-      </section>  -->
+      </section> 
 
       <!-- <section class="team">
         <div class="container">
