--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           </ul>
         </div>
       </section>
-       <section class="works">
+      <section class="works">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="works-list">
@@ -191,9 +191,9 @@
             </li>
           </ul>
         </div>
-      </section> 
+      </section>
 
-      <!-- <section class="team">
+      <section class="team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-item">
@@ -690,118 +690,118 @@
           </ul>
         </div>
       </section>
-    </main> -->
+    </main>
 
-    <!-- <footer class="footer-block"> 
-    <div class="container footer-box">
-      <div class="footer-logo">
-        <a href="./index.html" class="logo logo-footer">
-          <span class="first-part">Web</span
-          ><span class="footer-logo-part">Studio</span>
-        </a>
-        <address class="footer-address">
-          <ul class="footer-list">
-            <li class="footer-address-item">
+    <footer class="footer-block">
+      <div class="container footer-box">
+        <div class="footer-logo">
+          <a href="./index.html" class="logo logo-footer">
+            <span class="first-part">Web</span
+            ><span class="footer-logo-part">Studio</span>
+          </a>
+          <address class="footer-address">
+            <ul class="footer-list">
+              <li class="footer-address-item">
+                <a
+                  class="footer-maps-link logo-footer"
+                  href="https://goo.gl/maps/jrqWp66V7qRTPXJ29"
+                  target="blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-email">
+                <a
+                  class="footer-mail-link logo-footer"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-phone">
+                <a class="footer-tel-link logo-footer" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="container-footer">
+          <p class="footer-title">ПРИЄДНУЙТЕСЬ</p>
+          <ul class="social-list">
+            <li class="social-item">
               <a
-                class="footer-maps-link logo-footer"
-                href="https://goo.gl/maps/jrqWp66V7qRTPXJ29"
-                target="blank"
-                rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Українки, 26</a
+                class="social-link-footer"
+                href="https://instagram.com/"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                aria-label="Instagram"
               >
+                <svg class="social-icons" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram2"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-email">
+            <li class="social-item">
               <a
-                class="footer-mail-link logo-footer"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+                class="social-link-footer"
+                href="https://twitter.com/"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                aria-label="
+                Twitter"
               >
+                <svg class="social-icons" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-phone">
-              <a class="footer-tel-link logo-footer" href="tel:+380961111111"
-                >+38 096 111 11 11</a
+            <li class="social-item">
+              <a
+                class="social-link-footer"
+                href="https://facebook.com/"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                aria-label="Facebook"
               >
+                <svg class="social-icons" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link-footer"
+                href="https://linkedin.com"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                aria-label="Linkedin"
+              >
+                <svg class="social-icons" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
+        <div class="footer-input">
+          <p class="footer-input-text">Підпишіться на розсилку</p>
+          <form class="footer-form">
+            <input
+              type="text"
+              class="footer-input-subscription"
+              name="user-subscription"
+              placeholder="E-mail"
+            />
+            <button class="footer-btn button" type="submit">
+              Підписатися
+              <svg class="footer-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
-      <div class="container-footer">
-        <p class="footer-title">ПРИЄДНУЙТЕСЬ</p>
-        <ul class="social-list">
-          <li class="social-item">
-            <a
-              class="social-link-footer"
-              href="https://instagram.com/"
-              target="_blank"
-              rel="nofollow noopener noreferrer"
-              aria-label="Instagram"
-            >
-              <svg class="social-icons" width="20" height="20">
-                <use href="./images/icons.svg#icon-instagram2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a
-              class="social-link-footer"
-              href="https://twitter.com/"
-              target="_blank"
-              rel="nofollow noopener noreferrer"
-              aria-label="
-                Twitter"
-            >
-              <svg class="social-icons" width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a
-              class="social-link-footer"
-              href="https://facebook.com/"
-              target="_blank"
-              rel="nofollow noopener noreferrer"
-              aria-label="Facebook"
-            >
-              <svg class="social-icons" width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a
-              class="social-link-footer"
-              href="https://linkedin.com"
-              target="_blank"
-              rel="nofollow noopener noreferrer"
-              aria-label="Linkedin"
-            >
-              <svg class="social-icons" width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin1"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="footer-input">
-        <p class="footer-input-text">Підпишіться на розсилку</p>
-        <form class="footer-form">
-          <input
-            type="text"
-            class="footer-input-subscription"
-            name="user-subscription"
-            placeholder="E-mail"
-          />
-          <button class="footer-btn button" type="submit">
-            Підписатися
-            <svg class="footer-icons" width="24" height="24">
-              <use href="./images/icons.svg#icon-icon-send"></use>
-            </svg>
-          </button>
-        </form>
-      </div>
-    </div>
-    </footer>  -->
+    </footer>
 
     <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
