--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
         <div class="container">
           <h2 class="section-title">Постійні клієнти</h2>
           <ul class="clients-list">
-            <li class="clients-items">
+            <li class="clients-item">
               <a href="" class="clients-link">
                 <svg class="clients-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo"></use>
@@ -695,7 +695,7 @@
     <footer class="footer-block">
       <div class="container footer-box">
         <div class="footer-logo">
-          <a href="./index.html" class="logo logo-footer">
+          <a href="./index.html" class="logo-footer">
             <span class="first-part">Web</span
             ><span class="footer-logo-part">Studio</span>
           </a>
@@ -727,7 +727,7 @@
         </div>
         <div class="container-footer">
           <p class="footer-title">ПРИЄДНУЙТЕСЬ</p>
-          <ul class="social-list">
+          <ul class="social-list-footer">
             <li class="social-item">
               <a
                 class="social-link-footer"
