started-fix-desktop

--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
       </div>
     </footer>
 
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="close-btn" type="button" data-modal-close>
           <svg class="close-btn-icon" width="11" height="11">
@@ -859,9 +859,9 @@
                 type="checkbox"
                 name="agreement-checkbox"
                 value="agreement"
-              /> 
+              />
 
-     <span class="form-agreement-text"
+              <span class="form-agreement-text"
                 >Погоджуюся з розсилкою та приймаю
                 <a class="form-agreement-link" href="">Умови договору</a>
               </span>
@@ -870,7 +870,7 @@
           </div>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <div class="menu-container js-menu-container" id="mobile-menu">
       <button class="menu-toggle js-close-menu">
